feat(providers): add MAIA Router as recommended AI provider
Add MAIA Router integration as the default and recommended AI provider, offering access to 200+ models including 52+ free options. This change makes Pepebot more accessible to Indonesian users through QRIS payment support.

- Add MAIARouter configuration to providers config
- Update default model to maia/gemini-3-pro-preview
- Implement MAIA Router API key and base URL handling
- Add provider detection for maia/ prefixed models
- Update documentation with MAIA Router setup instructions
- Prioritize MAIA Router in provider fallback chain

--- a/config.example.json
+++ b/config.example.json
@@ -2,7 +2,7 @@
   "agents": {
     "defaults": {
       "workspace": "~/.pepebot/workspace",
-      "model": "glm-4.7",
+      "model": "maia/gemini-3-pro-preview",
       "max_tokens": 8192,
       "temperature": 0.7,
       "max_tool_iterations": 20
@@ -40,6 +40,10 @@
     }
   },
   "providers": {
+    "maiarouter": {
+      "api_key": "YOUR_MAIA_API_KEY",
+      "api_base": "https://api.maiarouter.ai/v1"
+    },
     "anthropic": {
       "api_key": "",
       "api_base": ""
