feat(ci): add Android platform support for ARM64, x86_64, and x86 builds
Add Android as a build target across CI/CD pipelines and build system:
- Add Android ARM64, x86_64, and x86 to CI workflow matrix
- Configure release workflow with Android build targets and CGO handling
- Add build-android make target for local ARM64 builds
- Update README with Android platform support and build instructions
- Add ANDROID.md documentation for Termux setup

Android x86 variants require CGO and are built in CI/CD with proper
toolchain configuration, while ARM64 can be built locally without CGO.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -111,6 +111,12 @@ jobs:
             goarch: arm64
           - goos: windows
             goarch: amd64
+          - goos: android
+            goarch: arm64
+          - goos: android
+            goarch: amd64
+          - goos: android
+            goarch: 386
 
     steps:
       - name: Checkout code
