refactor: migrate repository from anak10thn to pepebot-space organization
Update all repository references, import paths, and documentation links to reflect the new GitHub organization namespace. This includes:

- Go module path changed from github.com/anak10thn/pepebot to github.com/pepebot-space/pepebot
- All import statements updated across the codebase
- Documentation URLs updated in README, ANDROID.md, and RELEASE_NOTES
- GitHub workflow release notes and links updated
- Docker image labels updated with new repository URL

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -171,8 +171,8 @@ jobs:
           2. Run: pepebot onboard
           3. Follow the setup wizard
 
-          Documentation: https://github.com/anak10thn/pepebot
-          Issues: https://github.com/anak10thn/pepebot/issues
+          Documentation: https://github.com/pepebot-space/pepebot
+          Issues: https://github.com/pepebot-space/pepebot/issues
           EOF
 
           # Create archive
@@ -283,9 +283,9 @@ jobs:
 
           ## 📚 Documentation
 
-          - [README](https://github.com/anak10thn/pepebot#readme)
-          - [Setup Guide](https://github.com/anak10thn/pepebot#installation)
-          - [Configuration](https://github.com/anak10thn/pepebot#configuration)
+          - [README](https://github.com/pepebot-space/pepebot#readme)
+          - [Setup Guide](https://github.com/pepebot-space/pepebot#installation)
+          - [Configuration](https://github.com/pepebot-space/pepebot#configuration)
 
           ## 🔐 Verification
 
@@ -297,8 +297,8 @@ jobs:
 
           ## 💬 Support
 
-          - [Issues](https://github.com/anak10thn/pepebot/issues)
-          - [Discussions](https://github.com/anak10thn/pepebot/discussions)
+          - [Issues](https://github.com/pepebot-space/pepebot/issues)
+          - [Discussions](https://github.com/pepebot-space/pepebot/discussions)
 
           ---
 
