Add package manager support to Pepebot

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 # Pepebot Environment Configuration
 # Copy this file to .env and fill in your values
 
+# Docker Image Version (for docker-compose)
+PEPEBOT_VERSION=latest
+
 # Agent Configuration
 PEPEBOT_MODEL=maia/gemini-3-pro-preview
 PEPEBOT_MAX_TOKENS=8192
