--- a/.env.example
+++ b/.env.example
@@ -1,43 +1,127 @@
 # Pepebot Environment Configuration
 # Copy this file to .env and fill in your values
+#
+# Note: Pepebot supports both PEPEBOT_* prefixed variables and native provider variables
+# For example, you can use either PEPEBOT_PROVIDERS_OPENAI_API_KEY or OPENAI_API_KEY
 
-# Docker Image Version (for docker-compose)
+# ============================================================================
+# Docker Configuration
+# ============================================================================
 PEPEBOT_VERSION=latest
 
+# ============================================================================
 # Agent Configuration
-PEPEBOT_MODEL=maia/gemini-3-pro-preview
-PEPEBOT_MAX_TOKENS=8192
-PEPEBOT_TEMPERATURE=0.7
+# ============================================================================
+PEPEBOT_AGENTS_DEFAULTS_WORKSPACE=~/.pepebot/workspace
+PEPEBOT_AGENTS_DEFAULTS_MODEL=maia/gemini-3-pro-preview
+PEPEBOT_AGENTS_DEFAULTS_MAX_TOKENS=8192
+PEPEBOT_AGENTS_DEFAULTS_TEMPERATURE=0.7
+PEPEBOT_AGENTS_DEFAULTS_MAX_TOOL_ITERATIONS=20
 
+# ============================================================================
 # Provider API Keys (choose one or more)
+# ============================================================================
+
+# MAIA Router - Universal AI gateway with 200+ models
+# Get your key at: https://maiarouter.ai
 PEPEBOT_PROVIDERS_MAIAROUTER_API_KEY=
+PEPEBOT_PROVIDERS_MAIAROUTER_API_BASE=https://api.maiarouter.ai/v1
+# Alternative: MAIAROUTER_API_KEY=
+
+# Anthropic Claude
+# Get your key at: https://console.anthropic.com
 PEPEBOT_PROVIDERS_ANTHROPIC_API_KEY=
+PEPEBOT_PROVIDERS_ANTHROPIC_API_BASE=
+# Alternative: ANTHROPIC_API_KEY=
+
+# OpenAI GPT
+# Get your key at: https://platform.openai.com/api-keys
 PEPEBOT_PROVIDERS_OPENAI_API_KEY=
+PEPEBOT_PROVIDERS_OPENAI_API_BASE=
+# Alternative: OPENAI_API_KEY=
+
+# OpenRouter - Access to multiple AI models
+# Get your key at: https://openrouter.ai/keys
 PEPEBOT_PROVIDERS_OPENROUTER_API_KEY=
+PEPEBOT_PROVIDERS_OPENROUTER_API_BASE=
+# Alternative: OPENROUTER_API_KEY=
+
+# Groq - Fast inference
+# Get your key at: https://console.groq.com/keys
 PEPEBOT_PROVIDERS_GROQ_API_KEY=
-PEPEBOT_PROVIDERS_ZHIPU_API_KEY=
+PEPEBOT_PROVIDERS_GROQ_API_BASE=
+# Alternative: GROQ_API_KEY=
+
+# Google Gemini
+# Get your key at: https://makersuite.google.com/app/apikey
 PEPEBOT_PROVIDERS_GEMINI_API_KEY=
+PEPEBOT_PROVIDERS_GEMINI_API_BASE=
+# Alternative: GEMINI_API_KEY= or GOOGLE_API_KEY=
+
+# Zhipu GLM
+# Get your key at: https://open.bigmodel.cn
+PEPEBOT_PROVIDERS_ZHIPU_API_KEY=
+PEPEBOT_PROVIDERS_ZHIPU_API_BASE=
+# Alternative: ZHIPU_API_KEY=
+
+# VLLM - Self-hosted inference
+PEPEBOT_PROVIDERS_VLLM_API_KEY=
+PEPEBOT_PROVIDERS_VLLM_API_BASE=
+# Alternative: VLLM_API_KEY=
+
+# ============================================================================
+# Chat Channels Configuration
+# ============================================================================
 
 # Telegram Bot
+# Get token from: https://t.me/BotFather
 PEPEBOT_CHANNELS_TELEGRAM_ENABLED=false
 PEPEBOT_CHANNELS_TELEGRAM_TOKEN=
 PEPEBOT_CHANNELS_TELEGRAM_ALLOW_FROM=
+# Alternative: TELEGRAM_BOT_TOKEN=
 
 # Discord Bot
+# Get token from: https://discord.com/developers/applications
 PEPEBOT_CHANNELS_DISCORD_ENABLED=false
 PEPEBOT_CHANNELS_DISCORD_TOKEN=
 PEPEBOT_CHANNELS_DISCORD_ALLOW_FROM=
+# Alternative: DISCORD_BOT_TOKEN= or DISCORD_TOKEN=
 
-# WhatsApp Bridge
+# WhatsApp (Native integration via whatsmeow)
 PEPEBOT_CHANNELS_WHATSAPP_ENABLED=false
-PEPEBOT_CHANNELS_WHATSAPP_BRIDGE_URL=ws://localhost:3001
+PEPEBOT_CHANNELS_WHATSAPP_DB_PATH=~/.pepebot/whatsapp.db
+PEPEBOT_CHANNELS_WHATSAPP_ALLOW_FROM=
 
-# Web Search (Brave API)
+# Feishu (Lark)
+PEPEBOT_CHANNELS_FEISHU_ENABLED=false
+PEPEBOT_CHANNELS_FEISHU_APP_ID=
+PEPEBOT_CHANNELS_FEISHU_APP_SECRET=
+PEPEBOT_CHANNELS_FEISHU_ENCRYPT_KEY=
+PEPEBOT_CHANNELS_FEISHU_VERIFICATION_TOKEN=
+PEPEBOT_CHANNELS_FEISHU_ALLOW_FROM=
+
+# MaixCam
+PEPEBOT_CHANNELS_MAIXCAM_ENABLED=false
+PEPEBOT_CHANNELS_MAIXCAM_HOST=0.0.0.0
+PEPEBOT_CHANNELS_MAIXCAM_PORT=18790
+PEPEBOT_CHANNELS_MAIXCAM_ALLOW_FROM=
+
+# ============================================================================
+# Tools Configuration
+# ============================================================================
+
+# Web Search (Brave Search API)
+# Get your key at: https://brave.com/search/api/
 PEPEBOT_TOOLS_WEB_SEARCH_API_KEY=
+PEPEBOT_TOOLS_WEB_SEARCH_MAX_RESULTS=5
 
-# Gateway
+# ============================================================================
+# Gateway Configuration
+# ============================================================================
 PEPEBOT_GATEWAY_HOST=0.0.0.0
 PEPEBOT_GATEWAY_PORT=18790
 
-# System
+# ============================================================================
+# System Configuration
+# ============================================================================
 TZ=UTC
