--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,11 +15,56 @@ services:
     container_name: pepebot
     restart: unless-stopped
 
-    # Environment variables
+    # Load environment variables from .env file
+    env_file:
+      - .env
+
+    # Environment variables (override .env if needed)
     environment:
-      - PEPEBOT_AGENTS_DEFAULTS_MODEL=${PEPEBOT_MODEL:-maia/gemini-3-pro-preview}
-      - PEPEBOT_AGENTS_DEFAULTS_MAX_TOKENS=${PEPEBOT_MAX_TOKENS:-8192}
-      - PEPEBOT_AGENTS_DEFAULTS_TEMPERATURE=${PEPEBOT_TEMPERATURE:-0.7}
+      # Agent Configuration
+      - PEPEBOT_AGENTS_DEFAULTS_MODEL=${PEPEBOT_AGENTS_DEFAULTS_MODEL:-maia/gemini-3-pro-preview}
+      - PEPEBOT_AGENTS_DEFAULTS_MAX_TOKENS=${PEPEBOT_AGENTS_DEFAULTS_MAX_TOKENS:-8192}
+      - PEPEBOT_AGENTS_DEFAULTS_TEMPERATURE=${PEPEBOT_AGENTS_DEFAULTS_TEMPERATURE:-0.7}
+
+      # Provider API Keys (pass through from .env)
+      - PEPEBOT_PROVIDERS_MAIAROUTER_API_KEY=${PEPEBOT_PROVIDERS_MAIAROUTER_API_KEY:-}
+      - PEPEBOT_PROVIDERS_MAIAROUTER_API_BASE=${PEPEBOT_PROVIDERS_MAIAROUTER_API_BASE:-}
+      - PEPEBOT_PROVIDERS_ANTHROPIC_API_KEY=${PEPEBOT_PROVIDERS_ANTHROPIC_API_KEY:-}
+      - PEPEBOT_PROVIDERS_OPENAI_API_KEY=${PEPEBOT_PROVIDERS_OPENAI_API_KEY:-}
+      - PEPEBOT_PROVIDERS_OPENROUTER_API_KEY=${PEPEBOT_PROVIDERS_OPENROUTER_API_KEY:-}
+      - PEPEBOT_PROVIDERS_GROQ_API_KEY=${PEPEBOT_PROVIDERS_GROQ_API_KEY:-}
+      - PEPEBOT_PROVIDERS_GEMINI_API_KEY=${PEPEBOT_PROVIDERS_GEMINI_API_KEY:-}
+      - PEPEBOT_PROVIDERS_ZHIPU_API_KEY=${PEPEBOT_PROVIDERS_ZHIPU_API_KEY:-}
+      - PEPEBOT_PROVIDERS_VLLM_API_KEY=${PEPEBOT_PROVIDERS_VLLM_API_KEY:-}
+
+      # Native provider variables (alternative naming)
+      - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY:-}
+      - OPENAI_API_KEY=${OPENAI_API_KEY:-}
+      - OPENROUTER_API_KEY=${OPENROUTER_API_KEY:-}
+      - GROQ_API_KEY=${GROQ_API_KEY:-}
+      - GEMINI_API_KEY=${GEMINI_API_KEY:-}
+      - GOOGLE_API_KEY=${GOOGLE_API_KEY:-}
+
+      # Channel Configuration
+      - PEPEBOT_CHANNELS_TELEGRAM_ENABLED=${PEPEBOT_CHANNELS_TELEGRAM_ENABLED:-false}
+      - PEPEBOT_CHANNELS_TELEGRAM_TOKEN=${PEPEBOT_CHANNELS_TELEGRAM_TOKEN:-}
+      - PEPEBOT_CHANNELS_DISCORD_ENABLED=${PEPEBOT_CHANNELS_DISCORD_ENABLED:-false}
+      - PEPEBOT_CHANNELS_DISCORD_TOKEN=${PEPEBOT_CHANNELS_DISCORD_TOKEN:-}
+      - PEPEBOT_CHANNELS_WHATSAPP_ENABLED=${PEPEBOT_CHANNELS_WHATSAPP_ENABLED:-false}
+
+      # Alternative channel tokens
+      - TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN:-}
+      - DISCORD_BOT_TOKEN=${DISCORD_BOT_TOKEN:-}
+      - DISCORD_TOKEN=${DISCORD_TOKEN:-}
+
+      # Tools Configuration
+      - PEPEBOT_TOOLS_WEB_SEARCH_API_KEY=${PEPEBOT_TOOLS_WEB_SEARCH_API_KEY:-}
+
+      # Gateway Configuration
+      - PEPEBOT_GATEWAY_HOST=${PEPEBOT_GATEWAY_HOST:-0.0.0.0}
+      - PEPEBOT_GATEWAY_PORT=${PEPEBOT_GATEWAY_PORT:-18790}
+
+      # System
       - TZ=${TZ:-UTC}
 
     # Volumes
