fix: update release workflow for v0.4.1

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -316,6 +316,10 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
+    # Permissions for pushing to GitHub Container Registry
+    permissions:
+      contents: read
+      packages: write
 
     steps:
       - name: Checkout code
