--- a/dashboard/client/package.json
+++ b/dashboard/client/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.18",
     "axios": "^1.13.5",
+    "highlight.js": "^11.11.1",
     "lucide-vue-next": "^0.574.0",
+    "markdown-it": "^14.1.1",
     "vue": "^3.5.25",
     "vue-router": "^5.0.2"
   },
