--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -1,20 +1,18 @@
 {
+  "type": "module",
   "scripts": {
-    "start": "node index.js",
+    "dev": "nodemon index.js",
     "build": "cd client && npm install && npm run build",
-    "client:dev": "cd client && npm run dev",
-    "dev": "concurrently \"node index.js\" \"npm run client:dev\""
+    "start": "node index.js"
   },
   "dependencies": {
-    "@prisma/client": "5.10.0",
-    "axios": "^1.13.5",
     "cors": "^2.8.6",
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
     "multer": "^2.0.2",
-    "prisma": "5.10.0"
+    "vite": "^7.3.1"
   },
   "devDependencies": {
-    "concurrently": "^9.2.1"
+    "nodemon": "^3.1.11"
   }
 }
