--- a/dashboard/client/package.json
+++ b/dashboard/client/package.json
@@ -9,12 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@codemirror/lang-javascript": "^6.2.4",
+    "@codemirror/lang-json": "^6.0.2",
+    "@codemirror/lang-markdown": "^6.5.0",
+    "@codemirror/lang-python": "^6.2.1",
+    "@codemirror/theme-one-dark": "^6.1.3",
     "@tailwindcss/postcss": "^4.1.18",
     "axios": "^1.13.5",
+    "codemirror": "^6.0.2",
     "highlight.js": "^11.11.1",
     "lucide-vue-next": "^0.574.0",
     "markdown-it": "^14.1.1",
     "vue": "^3.5.25",
+    "vue-codemirror": "^6.1.1",
     "vue-router": "^5.0.2"
   },
   "devDependencies": {
