feat: Introduce a comprehensive workflow management system with new tools and CLI for creating, executing, and listing workflows.

--- a/.env.example
+++ b/.env.example
@@ -118,7 +118,7 @@ PEPEBOT_TOOLS_WEB_SEARCH_MAX_RESULTS=5
 # ============================================================================
 # Gateway Configuration
 # ============================================================================
-PEPEBOT_GATEWAY_HOST=0.0.0.0
+PEPEBOT_GATEWAY_HOST=127.0.0.1
 PEPEBOT_GATEWAY_PORT=18790
 
 # ============================================================================
